# gesetze-im-netz-gpt

./: .pre-commit-config.yaml  Dockerfile  Procfile  README.md  pyproject.toml
src/gesetze_im_netz/: main.py  privacy-policy.html
